[package]
name = "httptest"
version = "0.1.0"
authors = ["uriegel <uriegel@hotmail.de>"]
edition = "2018"

[dependencies]
tokio = { version = "1.6", features = ["sync", "full"] }
tokio-stream = "0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
warp = { version = "0.3", features = ["tls"] }
chrono = "0.4"
